<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <FrameLayout
        android:id="@+id/paint_and_brush_layout"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.069"
        android:visibility="invisible">

        <FrameLayout
            android:id="@+id/paint"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="26dp"
            android:background="@android:color/black" />

        <ImageView
            android:id="@+id/brush"
            android:layout_width="176dp"
            android:layout_height="183dp"
            android:src="@drawable/simple_brush" />

    </FrameLayout>

    <TextView
        android:id="@+id/colour_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Color name!"
        android:layout_marginTop="@dimen/colour_name_margin_top"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/splat"
        app:layout_constraintVertical_bias="0.103"
        android:textSize="@dimen/color_name_text"
        android:visibility="invisible"/>

    <ImageView
        android:id="@+id/splat"
        android:layout_width="230dp"
        android:layout_height="230dp"
        android:src="@drawable/simple_splat_opt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.503"
        android:visibility="invisible"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:backgroundTint="@color/colorPrimary"
        app:borderWidth="0dp"
        app:fabSize="normal"
        android:clickable="true"
        android:src="@drawable/ic_color_lens_white_24dp"
        android:layout_marginBottom="@dimen/fab_margin"
        android:layout_marginEnd="@dimen/fab_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
