<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="nav_view">

    <group android:checkableBehavior="single">

        <item android:id="@+id/nav_colour_generator"
            android:title="@string/colour_generator" />

        <item android:id="@+id/nav_my_colours"
            android:title="@string/my_colours" />
    </group>

</menu>